# combinatorial-algorithms

ErshovsAlgorithm/: CMakeLists.txt  Consts.h  createArchive.sh  graph.txt  main.cpp
ErshovsAlgorithm/Edge/: Edge.cpp  Edge.h
ErshovsAlgorithm/Face/: Face.cpp  Face.h
ErshovsAlgorithm/Graph/: Graph.cpp  Graph.h
ErshovsAlgorithm/Interface/: IGraphElement.h
ErshovsAlgorithm/Test/: ErshovAlgorithmTest.cpp
ErshovsAlgorithm/Test/data/: k5Graph.txt  planarGraph.txt  testTrianglesGraph.txt  withBridgeGraph.txt
ErshovsAlgorithm/Vertex/: Vertex.cpp  Vertex.h
RabinVazirani/: CMakeLists.txt  Graph.cpp  Graph.h  RabinVazirani.cpp  RabinVazirani.h  main.cpp
RabinVazirani/Test/: GraphTest.cpp  RabinVaziraniTest.cpp
RabinVazirani/Test/data/: cycleGraph.txt  k5Graph.txt  largeGraph.txt  lineGraph.txt  ordinaryGraph.txt
RelabelToFront/: CMakeLists.txt  Network.cpp  Network.h  RelabelToFront.cpp  RelabelToFront.h  main.cpp  networkExample.txt
RelabelToFront/Test/: RelabelToFrontTest.cpp
RelabelToFront/Test/data/: cycleGraph.txt  k5Graph.txt  k5WithReversePathsGraph.txt  lineGraph.txt
lw1_1/: CMakeLists.txt  cargo.txt  distance.txt  main.cpp
lw1_2/: CMakeLists.txt  main.cpp  skills.txt  test.sh
lw1_2/test/: expected.txt  input.txt
lw2/: CMakeLists.txt  Graph.cpp  Graph.h  Matrix.cpp  Matrix.h  Types.h  graph.txt  main.cpp
lw2/tests/: GraphTests.cpp
